# g-theory

./: README.md  dstudy_recommendations.py  gtheory.py  main.py  pyproject.toml  rebuild_wildbench_aggregates.py  rerun_dstudy.py
figures/: _style.py  figure_dstudy_projection.py  figure_heteroscedasticity.py  figure_recommendations.py
loaders/: __init__.py  biggen.py  fetch_all.py  helm.py  wildbench.py
sweeps/: common.py  sweep_biggen.py  sweep_biggen_het.py  sweep_helm.py  sweep_helm_het.py  sweep_wildbench.py  sweep_wildbench_het.py
validations/: validate_het_on_misspec.py  validate_misspecified.py  validate_n_M_sweep.py
